--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,25 @@
 *{
-    padding:0;
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
 :root{
-    --text-font:'Barlow', sans-serif;
-    --title-font:'Fraunces', serif;
-   --red: #fe7867;
-   --yellow: #fad400;
-   --gray: #a7abae;
-   --white: #ffffff;
-   --graphic-text: #25564b;
-   --photography-text: #19536b;
-   --footer: #458c7e;
-   --background: #FFFBFB;
+    --text-font: 'Barlow', sans-serif;
+    --title-font: 'Fraunces', serif;
+    --red: #fe7867;
+    --yellow: #fad400;
+    --gray: #a7abae;
+    --white: #ffffff;
+    --graphic-text: #25564b;
+    --photography-text: #19536b;
+    --footer: #458c7e;
+    --background: #FFFBFB;
 }
 body{
     font-family: var(--text-font);
     background-color: var(--background);
+
 }
 
 header{
@@ -29,21 +30,21 @@ header{
     color: var(--white);
     padding: 32px 16px;
     display: grid;
-  
 
 }
 header nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    place-self: start ;
+    place-self: start;
     width: 100%;
 }
 header .logo{
-    font-size:1.5rem ;
+    font-size: 1.5rem;
     font-weight: 700;
-    align-items: center;
 }
+
+
 header h1{
     font-family: var(--title-font);
     font-size: 2.5rem;
@@ -55,19 +56,16 @@ header h1{
 }
 header .arrow-down{
     place-self: start center;
-
 }
 .info img{
     width: 100%;
 }
-
 .description{
     display: grid;
     padding: 80px 0px;
-    place-self: center;
+    place-items: center;
     height: 500px;
 }
-
 .description__title{
     font-family: var(--title-font);
     font-size: 2rem;
@@ -78,28 +76,131 @@ header .arrow-down{
 
 .description__text{
     font-size: 1.2rem;
-    font-weight:600;
-    color: var(--gray);
+    font-weight: 600;
+    color:var(--gray);
     text-align: center;
     line-height: 2rem;
 }
 .description__link{
-    position: absolute;
+    position: relative;
     font-family: var(--title-font);
     font-weight: 900;
     font-size: 1.2rem;
     text-transform: uppercase;
-
 }
+
 .line{
     position: absolute;
     height: 8px;
-    bottom: 1%;
     width: 110%;
     left: -5%;
+    bottom: 1%;
     z-index: -1;
-    opacity: .4;
+    opacity: .3;
 }
 .line-yellow{
-    background-color: var(--yellow);
+    background-color: var(--yellow); 
+
 }
+.line-red{
+    background-color: var(--red);
+}
+.container{
+    height: 600px;
+    background-size: cover;
+}
+
+.container.graphic{
+    background-image: url(./images/mobile/image-graphic-design.jpg);
+
+}
+.container.graphic *{
+    color: var(--graphic-text);
+}
+
+.container .description{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 24px;
+    height: 100%;
+    padding-bottom: 48px;
+}
+.container .description__title{
+    font-size: 1.5rem;
+}
+
+.container .description__text{
+    font-size: 1rem;
+    font-weight: 600;
+}
+.container.photography{
+    background-image: url(./images/mobile/image-photography.jpg);
+}
+.container.photography *{
+    color: var(--photography-text); 
+}
+
+.testmonials{
+    text-align: center;
+}
+
+.testmonials-title{
+    font-family: var(--title-font);
+    font-size: 1.1rem;
+    letter-spacing: .2rem;
+    color: var(--gray);
+    padding: 32px 0;
+}
+
+.client{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
+    height: 150vh;
+}
+.client_avatar{
+    background-color: tomato;
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+
+    
+}
+.client_avatar.client1{
+    background-image: url(./images/image-emily.jpg);
+
+}
+
+.client_text{
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 2rem;
+    opacity: .7;
+
+}
+.client__name{
+    font-family: var(--title-font);
+    font-size: 1.2rem;
+    font-weight: 900;
+}
+.client__job{
+    color: var(--gray);
+    font-weight: 600;
+    padding: 12px;
+}
+
+.client_avatar.client2{
+        background-image: url(./images/image-thomas.jpg);
+        
+}
+
+.client_avatar.client3{
+    background-image: url(./images/image-jennie.jpg);
+    
+}
+    
